[package]
name = "eclipse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "solana-to-aleo"
path = "src/solana-to-aleo/main.rs"

[[bin]]
name = "aleo-to-solana"
path = "src/aleo-to-solana/main.rs"

[dependencies]
bs58 = "0.4.0"
clap = "2.33.1"
derivative = "2"
ed25519-dalek = "=1.0.1"
serde = "1.0.131"
serde_json = "1.0.56"
snarkos-storage = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet2" }
snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "ff10c20" }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "ff10c20" }
snarkvm-fields = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "ff10c20" }
snarkvm = { git = "https://github.com/AleoHQ/snarkVM.git", rev = "ff10c20" }
solana-client = "1.8.3"
solana-vote-program = "1.8.3"
solana-sdk = "1.8.3"
solana-transaction-status = "1.8.3"
ticker = "0.1.1"
url = "2.2.2"
anyhow = "1.0.52"
tokio = { version = "1.8", features = ["full"] }
tracing = "0.1"
jsonrpsee = { version = "0.7.0", features = ["macros", "http-client"]}
jsonrpsee-core = { version = "0.7.0"}

